            - Routine isReadOnlySnapshot() is now public, not protected.
        Class TableView:
            - New class to help wrap read-only multi-dimensional arrays.
        Class TorusBundle:
            - The class constructors now throw an exception if the given
              monodromy does not have determinant ±1 (note that this has
              always a precondition).
        Function buildInfo():
            - New function that allows packagers to embed additional
              version/build-related information in the calculation engine.
        Function maxDim():
            - New constexpr function that indicates whether Regina was built
              with support for higher dimensions 9..15.
    PYTHON:
        - Updated the included pybind11 library from 2.8.1 to 2.10.0.
          This means we can now support Python 3.11, but no longer support
          Python 3.4 or 3.5.
        - Everything in Regina now has docstrings!  These are extracted
          automatically from the (human-written) C++ documentation, so you
          will still find C++ terminology.  Neverhtless, these are now
          available in Python for all of Regina's classes and functions.
        - Several classes that provide array-like access (__getitem__) now
          implement the special __len__() function also.  Note that this
          affects how objects are evaluated in a boolean context.  Affected
          classes: AngleStructures, Cyclotomic, FacetPairing<dim>,
          Isomorphism<dim>, ListView, Matrix2, NormalHypersurfaces,
          NormalSurfaces, Vector<T>.
        - A few omissions in the Python bindings were fixed.  Other than
          giving Python users access to more functions, two of these fixes
          mean a change in behaviour for Python users: these are the
          newly-added bindings for SnapPeaTriangulation::snapPea() and
          SnapPeaTriangulation::saveSnapPea().  Previously if Python users